--- a/game.css
+++ b/game.css
@@ -14,10 +14,33 @@ body {
     position: relative;
 }
 
-canvas#game-canvas {
-    border: 1px solid black;
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-div#start-screen {
+canvas#game-canvas {
+    z-index: 0;
+}
+
+div.screen {
+    z-index: 1;
+    display: flex;
+    width: 100%;
     height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+div.message {
+    font-size: 2.5vh;
+    margin-bottom: 1vh;
+}
+
+button {
+    z-index: 1;
+    font-size: 2vh;
+    padding: 1.5vh;
 }
