background and box style

--- a/game.css
+++ b/game.css
@@ -31,16 +31,54 @@ div.screen {
     height: 100%;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-div.message {
-    font-size: 2.5vh;
-    margin-bottom: 1vh;
 }
 
 button {
-    z-index: 1;
-    font-size: 2vh;
+    box-shadow:inset 0px 1px 3px 0px #91b8b3;
+    background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+    background-color:#768d87;
+    border-radius:5px;
+    border:1px solid #566963;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-size: 3vh;
     padding: 1.5vh;
+    font-weight:bold;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #2b665e;
+}
+
+button:hover {
+    background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
+    background-color:#6c7c7c;
+}
+
+button:active {
+    position:relative;
+    top:1px;
+}
+
+#end-screen {
+    transition: opacity 0.4s ease;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#end-screen > .title {
+    margin-top: 3vh;
+    font-size: 7em;
+    font-family: sans-serif;
+    color: white;
+}
+
+#end-screen > .message {
+    color: white;
+    font-size: 2em;
+    margin-top: 30vh;
+    margin-bottom: 4vh;
+    font-family: monospace;
+}
+
+button {
+    z-index: 999;
 }
