--- a/game.css
+++ b/game.css
@@ -12,67 +12,74 @@ html, body {
 body {
     text-align: center;
     position: relative;
+    font-family: sans-serif;
+}
+
+button {
+    font-size: 2.7em;
+    padding: 0.07em 0.25em;
+    background-color: gray;
+    border-radius: 4px;
+    box-shadow: 0 0 5px #333;
+    border: 2px solid #222;
 }
 
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
+    transition: all 0.4s ease;
 }
 
 .screen {
-    z-index: 1;
     display: flex;
     width: 100%;
     height: 100%;
     flex-direction: column;
     align-items: center;
+    background-color: #fffacd;
 }
 
-button {
-    box-shadow:inset 0px 1px 3px 0px #91b8b3;
-    background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-    background-color:#768d87;
-    border-radius:5px;
-    border:1px solid #566963;
-    color:#ffffff;
-    font-size: 3vh;
-    padding: 1.5vh;
-    font-weight:bold;
-    text-shadow:0px -1px 0px #2b665e;
+.title {
+    margin-top: 4vh;
+    font-size: 6em;
+    color: #222;
+    text-shadow: 0 0 7px #444;
+    font-family: fantasy, cursive, serif;
+    margin-bottom: 15vh;
+    font-weight: bold;
 }
 
-button:active {
-    position:relative;
-    top:1px;
-}
-
-#game-screen {
-    z-index: -1;
-}
-
-#end-screen {
-    transition: opacity 0.25s ease;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-#end-screen > .title {
+#start-screen > button {
     margin-top: 3vh;
-    font-size: 7em;
-    font-family: sans-serif;
-    color: white;
 }
 
-#end-screen > .message {
-    color: white;
-    font-size: 2em;
-    margin-top: 30vh;
-    margin-bottom: 4vh;
+.actions > button {
+    margin: 1vh;
+    vertical-align: center;
+}
+
+.actions {
+    margin-top: 6vh;
+}
+    
+.stats-info {
+    border-radius: 10px;
+}
+
+.stats-info > div {
+    padding: 0.2em 0.2em;
+    font-size: 1.7em;
+}
+
+.stats-info > div:last-child {
+    border-bottom: none;
+}
+
+.stats {
     font-family: monospace;
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #333;
 }
 
-#hud > #current-score {
-    z-index: 2;
-    font-size: 2.5em;
-    align-self: flex-end;
-}
