--- a/game.css
+++ b/game.css
@@ -24,10 +24,14 @@ button {
     border: 2px solid #222;
 }
 
+#holder {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+    height: 100%;
+}
 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
     transition: all 0.4s ease;
 }
 
@@ -45,7 +49,7 @@ button {
     font-size: 6em;
     color: #222;
     text-shadow: 0 0 7px #444;
-    font-family: fantasy, cursive, serif;
+    font-family: serif;
     margin-bottom: 15vh;
     font-weight: bold;
 }
@@ -62,7 +66,7 @@ button {
 .actions {
     margin-top: 6vh;
 }
-    
+
 .stats-info {
     border-radius: 10px;
 }
